--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.2.9",
     "vue": "^3.0.0",
+    "vue-debounce": "^2.6.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
