--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "core-js": "^3.6.5",
     "firebase": "^8.2.9",
+    "uuid": "^8.3.2",
     "vue": "^3.0.0",
     "vue-debounce": "^2.6.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.5.0",
